test/typechecker.d/invalid/fns8.surc.bad
f(n: Integer): Integer = fndo
	var x <- n
	return
